--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes colorfade {
+  0% {
+    background: var(--primary-color);
+  }
+
+  100% {
+    background: var(--secondary-color);
+  }
+}
